libtaskmanager: Fix initialization of IsActive in WaylandTasksModel

The IsActive role does not represent state_active anymore, but rather
the activeWindow property of the WaylandTasksModel::Private.

Unlike Wayland windows, X11 windows can be already active when they are
added. So this case needs to be handled in order to properly initialize
the activeWindow property.

BUG: 478951


(cherry picked from commit df5a6097401124b8ecad874ae1a7e01df5e61028)